[Project]: Update runtime guidance
Document the current JavaFX runtime behavior and project workflow.
Update the launcher to disable D3D on Windows unless users override it.
Refresh skill metadata text so helper workflows stay consistent.

Assisted-by: OpenAI GPT-5